# general-unified-world-modeling

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
curricula/: standard.yaml
docs/: api.md  architecture.md  cogvideox.md  dag_curriculum.md  datasets.md  environments.md  examples.md  index.md  schema.md  training.md  training_curriculum.md  use_cases.md
envs/corporate_world_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/corporate_world_env/server/: Dockerfile  __init__.py  app.py  corporate_world_env_environment.py
envs/robot_world_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/robot_world_env/server/: Dockerfile  __init__.py  app.py  requirements.txt  robot_world_env_environment.py
examples/: 01_quickstart.py  02_ceo_company_model.py  03_government_policy.py  04_computer_use_agent.py  05_train_financial.py  06_curriculum_training.py  07_llm_build.py  08_corporate_envs.py  09_robot_envs.py  10_worldenv_trl_training.py  curriculum.yaml
notebooks/: worldenv_trl_training.ipynb
scripts/: generate_assets.py  generate_env_assets.py  generate_env_videos.py  smoke_test.py  train_h100.py
src/general_unified_world_model/: __init__.py  env.py  inference.py
src/general_unified_world_model/data/: __init__.py  adapters.py  collectors.py  huggingface.py
src/general_unified_world_model/llm/: __init__.py  dataset_annotator.py  projection_builder.py
src/general_unified_world_model/projection/: __init__.py  subset.py  temporal.py
src/general_unified_world_model/rendering/: __init__.py  base.py  canvas.py  causal_graph.py  financial.py  geopolitical.py  regime.py  social.py  topology.py
src/general_unified_world_model/schema/: __init__.py  biology.py  business.py  country.py  cyber.py  demographics.py  education.py  events.py  financial.py  health.py  individual.py  infrastructure.py  intervention.py  legal.py  macro.py  narrative.py  observability.py  physical.py  political.py  regime.py  resources.py  sector.py  space.py  supply_chain.py  technology.py  temporal_constants.py  trust.py  world.py
src/general_unified_world_model/training/: __init__.py  backbone.py  curriculum.py  dag_curriculum.py  diffusion.py  heterogeneous.py
src/guwm/: __init__.py  inference.py
src/guwm/data/: adapters.py
src/guwm/projection/: __init__.py  subset.py  transfer.py
src/guwm/schema/: __init__.py  business.py  country.py  demographics.py  events.py  forecast.py  intervention.py  macro.py  political.py  sector.py  supply_chain.py  technology.py  world.py
src/guwm/training/: curriculum.py  diffusion.py  heterogeneous.py
tests/: conftest.py  test_adapters.py  test_collectors.py  test_dag_curriculum.py  test_env.py  test_fog.py  test_inference.py  test_llm.py  test_nl_curriculum.py  test_projection.py  test_rendering.py  test_schema.py  test_training.py
worldenv/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
worldenv/server/: Dockerfile  __init__.py  app.py  world_environment.py
