[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "general-unified-world-model"
version = "0.0.2"
description = "General Unified World Model — a typed causal ontology of civilization, built on canvas-engineering structured latent spaces."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Jacob Valdez", email = "jacob@jacobfv.com"},
]
keywords = ["world-model", "diffusion", "latent-space", "canvas-engineering", "multimodal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "canvas-engineering>=0.1.1",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14",
    "fredapi>=0.5",
    "yfinance>=0.2",
    "requests>=2.28",
]
train = [
    "accelerate>=0.25",
    "wandb>=0.16",
    "safetensors>=0.4",
    "bitsandbytes>=0.41",
]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "matplotlib>=3.7",
]
all = [
    "general-unified-world-model[data,train,dev,viz]",
]

[project.urls]
Homepage = "https://github.com/JacobFV/general-unified-world-modeling"
Repository = "https://github.com/JacobFV/general-unified-world-modeling"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
